--- a/src/app/forget-password/change-password/change-password.component.html
+++ b/src/app/forget-password/change-password/change-password.component.html
@@ -29,16 +29,16 @@
                             <div class="my-auto">
 
                                 <div>
-                                    <h5 class="text-primary">Lock screen</h5>
+                                    <h5 class="text-primary">Reset password</h5>
                                     <p class="text-muted">Enter your password to unlock the screen!</p>
                                 </div>
 
                                 <div class=" mt-4">
 
                                     <div class="user-thumb text-center mb-4">
-                                        <img src="assets/images/users/avatar-1.jpg"
+                                        <img src="{{user_reset.pic}}"
                                             class="rounded-circle img-thumbnail avatar-md" alt="thumbnail">
-                                        <h5 class="font-size-15 mt-3">Maria Laird</h5>
+                                        <h5 class="font-size-15 mt-3"> {{user_reset.firstName}} </h5>
                                     </div>
 
                                     <form [formGroup]="passChange" (ngSubmit)="onSubmit()">
@@ -49,6 +49,8 @@
                                                 placeholder="Enter password">
                                                 <div *ngIf="submitted && f.newPassword.errors" class="invalid-feedback">
                                                     <div *ngIf="f.newPassword.errors.required">Password is required</div>
+                                                    <div *ngIf="f.newPassword.errors.minlength">Password must be over 8 letters</div>
+                                                    <div *ngIf="f.newPassword.errors.pattern">Password is must be mixed between letters , Numbers and */@</div>
                                                   </div>
                                         </div>
 
