--- a/src/app/pages/user/add-supervisor/add-supervisor.component.html
+++ b/src/app/pages/user/add-supervisor/add-supervisor.component.html
@@ -1,18 +1,39 @@
 <div class="container-fluid">
 
   <!-- start page title -->
-  <app-page-title title="Form Validation" [breadcrumbItems]="breadCrumbItems"></app-page-title>
+  <app-page-title title="Add Supervisor" [breadcrumbItems]="breadCrumbItems"></app-page-title>
   <!-- end page title -->
 
   <div class="row">
     <div class="col-lg-12">
       <div class="card">
         <div class="card-body">
-          <h4 class="card-title">Bootstrap Validation - Normal</h4>
-          <p class="card-title-desc">Provide valuable, actionable feedback to your users with HTML5 form
-            validation–available in all our supported browsers.</p>
+          <p class="card-title-desc"> When you add a supervisor , he will be able to login and use your 
+            services offred by this plateform.
+          </p>
 
           <form (ngSubmit)="validSubmit()" [formGroup]="StudentForm">
+            <div class="row">
+              <div class="text-center mb-4">
+                <div class="position-relative d-inline-block">
+                  <div class="position-absolute bottom-0 end-0">
+                    <label for="member-image-input" class="mb-0" data-bs-toggle="tooltip" data-bs-placement="right" title="Select Member Image">
+                      <div class="avatar-xs">
+                        <div class="avatar-title bg-light border rounded-circle text-muted cursor-pointer">
+                          <i class="bx bxs-image-alt"></i>
+                        </div>
+                      </div>
+                    </label>
+                    <input class="form-control d-none" value="" id="member-image-input" type="file" accept="image/png, image/gif, image/jpeg" (change)="fileChange($event)">
+                  </div>
+                  <div class="avatar-lg">
+                    <div class="avatar-title bg-light rounded-circle">
+                      <img src="assets/images/users/user-dummy-img.jpg" id="member-img" class="avatar-md rounded-circle h-auto" />
+                    </div>
+                  </div>
+                </div>
+                </div>
+            </div>
             <div class="row">
               <div class="col-md-4">
                <div class="mb-3">
@@ -21,6 +42,7 @@
                       [ngClass]="{ 'is-invalid': submit && form.firstName.errors}" placeholder="Entre votre email">
                       <div *ngIf="submit && form.firstName.errors" class="invalid-feedback">
                         <div *ngIf="form.firstName.errors.required">First Name requis</div>
+                        <div *ngIf="form.firstName.errors.pattern">First Name must be with letters</div>
                     </div>
                      </div>                 
                </div>
@@ -31,6 +53,7 @@
                    [ngClass]="{ 'is-invalid': submit && form.lastName.errors}" placeholder="Entre votre email">
                    <div *ngIf="submit && form.lastName.errors" class="invalid-feedback">
                     <div *ngIf="form.lastName.errors.required">Last Name requis</div>
+                    <div *ngIf="form.lastName.errors.pattern">Last Name must be with letters</div>
                 </div>               
               </div>
               </div>
@@ -41,6 +64,8 @@
                      [ngClass]="{ 'is-invalid': submit && form.phoneNumber.errors}" placeholder="Entre votre email">
                      <div *ngIf="submit && form.phoneNumber.errors" class="invalid-feedback">
                       <div *ngIf="form.phoneNumber.errors.required">Phone Number requis</div>
+                      <div *ngIf="form.phoneNumber.errors.pattern">Phone Number must be with Numbers only</div>
+                      <div *ngIf="form.phoneNumber.errors.maxlength || form.phoneNumber.errors.minlength">Phone Number must be with 8 Numbers</div>
                   </div>             
                 </div>
                 </div>
@@ -53,6 +78,8 @@
                        [ngClass]="{ 'is-invalid': submit && form.cin.errors}" placeholder="Entre votre email">
                        <div *ngIf="submit && form.cin.errors" class="invalid-feedback">
                         <div *ngIf="form.cin.errors.required">Card ID requis</div>
+                        <div *ngIf="form.cin.errors.pattern">Card ID  must be with Numbers only</div>
+                        <div *ngIf="form.cin.errors.maxlength || form.cin.errors.minlength">Card ID  must be with 8 Numbers</div>
                     </div>             
                   </div>
                   </div>
@@ -62,7 +89,9 @@
                          <input type="email" class="form-control" id="emailPro" formControlName="emailPro" 
                          [ngClass]="{ 'is-invalid': submit && form.emailPro.errors}" placeholder="Entre votre email">
                          <div *ngIf="submit && form.emailPro.errors" class="invalid-feedback">
-                          <div *ngIf="form.emailPro.errors.required">University ID requis</div>
+                          <div *ngIf="form.emailPro.errors.required">Professional email requis</div>
+                          <div *ngIf="form.emailPro.errors.maxlength">Very long for an email</div>
+                          <div *ngIf="form.emailPro.errors.email">Must be a valid email form</div>
                       </div>            
                     </div>
                     </div>
@@ -73,6 +102,8 @@
                          [ngClass]="{ 'is-invalid': submit && form.login.errors}" placeholder="Entre votre email">
                          <div *ngIf="submit && form.login.errors" class="invalid-feedback">
                           <div *ngIf="form.login.errors.required">Login requis</div>
+                          <div *ngIf="form.login.errors.maxlength">Very long for an Login</div>
+                          <div *ngIf="form.login.errors.email">Must be a valid email form</div>
                       </div>                
                     </div>
                     </div>
@@ -85,6 +116,7 @@
                      [ngClass]="{ 'is-invalid': submit && form.address.errors}" placeholder="Entre votre email">
                      <div *ngIf="submit && form.address.errors" class="invalid-feedback">
                       <div *ngIf="form.address.errors.required">Address requis</div>
+                      <div *ngIf="form.address.errors.pattern">Address must be with letters</div>
                   </div>         
                 </div>
                 </div>
@@ -94,33 +126,14 @@
                        <input type="text" class="form-control" id="company" formControlName="company" 
                        [ngClass]="{ 'is-invalid': submit && form.company.errors}" placeholder="Entre votre email">
                        <div *ngIf="submit && form.company.errors" class="invalid-feedback">
-                        <div *ngIf="form.company.errors.required">Address requis</div>
+                        <div *ngIf="form.company.errors.required">Company requis</div>
+                        <div *ngIf="form.company.errors.maxlength">Very long for a Company Name</div>
                     </div>         
                   </div>
                   </div>
-              
             </div>
-            <div class="text-center mb-4">
-              <div class="position-relative d-inline-block">
-                <div class="position-absolute bottom-0 end-0">
-                  <label for="member-image-input" class="mb-0" data-bs-toggle="tooltip" data-bs-placement="right" title="Select Member Image">
-                    <div class="avatar-xs">
-                      <div class="avatar-title bg-light border rounded-circle text-muted cursor-pointer">
-                        <i class="bx bxs-image-alt"></i>
-                      </div>
-                    </div>
-                  </label>
-                  <input class="form-control d-none" value="" id="member-image-input" type="file" accept="image/png, image/gif, image/jpeg" (change)="fileChange($event)">
-                </div>
-                <div class="avatar-lg">
-                  <div class="avatar-title bg-light rounded-circle">
-                    <img src="assets/images/users/user-dummy-img.jpg" id="member-img" class="avatar-md rounded-circle h-auto" />
-                  </div>
-                </div>
-              </div>
-              </div>
           <div>
-            <button class="btn btn-primary" type="submit">Submit form</button>
+            <button class="btn btn-danger" type="submit">Submit form</button>
           </div>
           </form>
         </div>
