--- a/src/app/pages/user/list-supervisor/list-supervisor.component.html
+++ b/src/app/pages/user/list-supervisor/list-supervisor.component.html
@@ -15,11 +15,6 @@
                   </div>
                 </div>
               </div>
-              <div class="col-sm-8">
-                <div class="text-sm-end">
-                  <button type="button" data-bs-toggle="modal" (click)="newContactModal.show()" class="btn btn-success btn-rounded waves-effect waves-light addContact-modal mb-2"><i class="mdi mdi-plus me-1"></i> New Contact</button>
-                </div>
-              </div><!-- end col-->
             </div>
             <!-- end row -->
             <div class="table-responsive">
@@ -33,6 +28,7 @@
                     <th scope="col">Professional Email</th>
                     <th scope="col">Card ID</th>
                     <th scope="col">Phone Number</th>
+                    <th scope="col">Status</th>
                     <th scope="col" style="width: 200px;">Action</th>
                   </tr>
                 </thead>
@@ -52,14 +48,7 @@
                       <p class="text-muted mb-0">{{data.lastName}} {{data.firstName}}</p>
                     </td>
                     <td>{{data.login}}</td>
-                    <td>
-                      {{data.company}}
-                   <!--  <div>
-                        <a href="javascript: void(0);" class="badge badge-soft-primary font-size-11 m-1">{{data.tags[0]}}</a>
-                        <a href="javascript: void(0);" class="badge badge-soft-primary font-size-11 m-1">{{data.tags[1]}}</a>
-                        <a href="javascript: void(0);" class="badge badge-soft-primary font-size-11 m-1">{{data.tags[2]}}</a>
-                      </div>
-                    </td>--> 
+                    <td> {{data.company}} </td>
                     <td>
                       {{data.emailPro}}
                     </td>
@@ -68,6 +57,14 @@
                     </td>
                     <td>
                         {{data.phoneNumber}}
+                      </td>
+                      <td class="list-inline font-size-20 text-center mb-0">
+                        <div *ngIf="!data.activated">
+                          <i class="bx bxs-x-circle font-size-20 text-danger me-1"></i>
+                        </div>
+                        <div *ngIf="data.activated">
+                          <i class="bx bxs-circle font-size-20 text-success me-1"></i>
+                        </div>
                       </td>
                     <td>
                       <ul class="list-inline font-size-20 contact-links mb-0">
@@ -81,8 +78,8 @@
                           <div dropdown class="dropdown">
                             <a dropdownToggle href="javascript: void(0);" class="dropdown-toggle card-drop px-2 show" aria-expanded="true"> <i class="mdi mdi-dots-horizontal font-size-18"></i> </a>
                             <ul *dropdownMenu class="dropdown-menu dropdown-menu-end show" style="position: absolute; inset: 0px 0px auto auto; margin: 0px; transform: translate(0px, 31.25px);" placement="bottom-end">
-                              <li><a href="javascript:void(0);" (click)="editUser(i)" class="dropdown-item edit-list" data-edit-id="8"><i class="mdi mdi-pencil font-size-16 text-success me-1"></i> Edit</a></li>
-                              <li><a href="javascript:void(0);" (click)="removeUser(i)" class="dropdown-item remove-list" data-remove-id="8"><i class="mdi mdi-trash-can font-size-16 text-danger me-1"></i> Delete</a></li>
+                              <li><a href="javascript:void(0);" (click)="removeUser(data.id)" class="dropdown-item remove-list" data-remove-id="8">
+                                <i class="bx bxs-no-entry font-size-16 text-danger me-1"></i> Blcok</a></li>
                             </ul>
                           </div>
                         </li>
@@ -105,106 +102,3 @@
       </div>
     </div>
   </div>
-  
-  <!-- Modal -->
-  <div bsModal #newContactModal="bs-modal" class="modal fade" id="newContactModal" tabindex="-1" aria-labelledby="newContactModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header">
-          <h5 class="modal-title" id="newContactModalLabel">Add Contact</h5>
-          <button type="button" class="btn-close" (click)="newContactModal.hide()"></button>
-        </div>
-        <div class="modal-body">
-          <form (ngSubmit)="saveUser()" [formGroup]="createContactForm" autocomplete="off" class="needs-validation createContact-form" id="createContact-form" novalidate>
-            <div class="row">
-              <div class="col-lg-12">
-                <input type="hidden" class="form-control" id="userid-input">
-                <div class="text-center mb-4">
-                  <div class="position-relative d-inline-block">
-                    <div class="position-absolute bottom-0 end-0">
-                      <label for="member-image-input" class="mb-0" data-bs-toggle="tooltip" data-bs-placement="right" title="Select Member Image">
-                        <div class="avatar-xs">
-                          <div class="avatar-title bg-light border rounded-circle text-muted cursor-pointer">
-                            <i class="bx bxs-image-alt"></i>
-                          </div>
-                        </div>
-                      </label>
-                      <input class="form-control d-none" value="" id="member-image-input" type="file" accept="image/png, image/gif, image/jpeg" (change)="fileChange($event)">
-                    </div>
-                    <div class="avatar-lg">
-                      <div class="avatar-title bg-light rounded-circle">
-                        <img src="assets/images/users/user-dummy-img.jpg" id="member-img" class="avatar-md rounded-circle h-auto" />
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <div class="mb-3">
-                  <label for="username-input" class="form-label">User Name</label>
-                  <input type="text" id="username-input" class="form-control" placeholder="Enter name" formControlName="name" required />
-                  <div class="invalid-feedback">Please enter a name.</div>
-                </div>
-                <div class="mb-3">
-                  <label for="designation-input" class="form-label">Designation</label>
-                  <input type="text" id="designation-input" class="form-control" placeholder="Enter Designation" formControlName="position" required />
-                  <div class="invalid-feedback">Please enter a designation.</div>
-                </div>
-                <div class="mb-3">
-                  <label for="email-input" class="form-label">Email</label>
-                  <input type="email" id="email-input" class="form-control" placeholder="Enter email" formControlName="email" required />
-                  <div class="invalid-feedback">Please enter email.</div>
-                </div>
-                <div class="mb-3">
-                  <label for="tag-input" class="form-label">Tags</label>
-                  <select class="select2 form-control select2-multiple" id="tag-input" multiple="multiple" formControlName="tags" data-placeholder="Choose ...">
-                    <option value="Photoshop">Photoshop</option>
-                    <option value="illustrator">illustrator</option>
-                    <option value="Html">Html</option>
-                    <option value="Css">Css</option>
-                    <option value="Javascript">Javascript</option>
-                    <option value="Php">Php</option>
-                    <option value="Java">Java</option>
-                    <option value="Ruby">Ruby</option>
-                    <option value="Python">Python</option>
-                  </select>
-                </div>
-              </div>
-  
-              <div class="col-lg-12">
-                <div class="text-end">
-                  <button type="button" class="btn btn-outline-secondary me-1" (click)="newContactModal.hide()">Cancel</button>
-                  <button type="submit" id="addContact-btn" class="btn btn-success">Add Customer</button>
-                </div>
-              </div>
-            </div>
-          </form>
-        </div>
-        <!-- end modal body -->
-      </div>
-      <!-- end modal-content -->
-    </div>
-    <!-- end modal-dialog -->
-  </div>
-  <!-- end newContactModal -->
-  
-  <!-- removeItemModal -->
-  <div bsModal #removeItemModal="bs-modal" class="modal fade" id="removeItemModal" tabindex="-1" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered modal-sm">
-      <div class="modal-content">
-        <div class="modal-body px-4 py-5 text-center">
-          <button type="button" class="btn-close position-absolute end-0 top-0 m-3"  (click)="removeItemModal.hide()"></button>
-          <div class="avatar-sm mb-4 mx-auto">
-            <div class="avatar-title bg-primary text-primary bg-opacity-10 font-size-20 rounded-3">
-              <i class="mdi mdi-trash-can-outline"></i>
-            </div>
-          </div>
-          <p class="text-muted font-size-16 mb-4">Are you Sure You want to Remove this User ?</p>
-  
-          <div class="hstack gap-2 justify-content-center mb-0">
-            <button type="button" class="btn btn-danger me-1" id="remove-item" (click)="confirmDelete()">Remove Now</button>
-            <button type="button" class="btn btn-secondary" (click)="removeItemModal.hide()">Close</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- end removeItemModal -->
