--- a/src/app/pages/forum/listforum/listforum.component.html
+++ b/src/app/pages/forum/listforum/listforum.component.html
@@ -35,7 +35,7 @@
               </div>
               <div class="col-10">
                 <div *ngFor="let tag of question.tags" class="badge bg-primary me-1 mb-1">
-                  {{ tag }}
+                  {{ tag.name }}
                 </div>
               </div>
               <div class="d-print-none">
